--- a/design/design.html
+++ b/design/design.html
@@ -23,7 +23,7 @@
 	    <!-- This is where you put content -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Devin Brown</a>
+    <a class="navbar-brand" href="../index.html">Devin Brown</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
