--- a/design/design.html
+++ b/design/design.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Devin Brown - Bootstrap 1</title>
+    <title>Devin Brown - Bootstrap 1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,14 +13,14 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="../css/styles.css">
-	<!-- font -->
+  <!-- font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
   </head>
   <body>
-		
-	    <!-- This is where you put content -->
+    
+      <!-- This is where you put content -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Devin Brown</a>
@@ -40,7 +40,7 @@
             Research
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Project 1</a></li>
+            <li><a class="dropdown-item" href="../research/research1.html">Project 1</a></li>
             <li><a class="dropdown-item" href="#">Project 2</a></li>
             <li><a class="dropdown-item" href="#">Project 3</a></li>
           </ul>
@@ -113,7 +113,7 @@
 
 
 <div class="footer">
-    <p>Copyright Devin Brown | Last upadate Fall 2022.</p> 
+    <p>Copyright Devin Brown | Last update Fall 2022.</p> 
 </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
